--- a/span.html
+++ b/span.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>The span element is nothing </h1>
-
+<h2> nothing </h2>
 <p>My mother has <span style="color:blue;font-weight:bold">blue</span> eyes and my father has <span style="color:darkolivegreen;font-weight:bold">dark green</span> eyes.</p>
 
 </body>
