--- a/task1.html
+++ b/task1.html
@@ -28,7 +28,7 @@
  
 <div class ="pic">
 <img src=" C:\Users\admin\Desktop\e76fef8a-b546-4f39-ab44-e7fde7922550.jpg";>
-<h2> <center style="font-size:30px ">Welcome to   the  soham soham quizbase   </center></h2> 
+<h2> <center style="font-size:30px ">Welcome to   the  soham  the soham quizbase   </center></h2> 
 
 <div class ="card">
 <input type ="button"  value="dashboard"  style="background-color: green;  color: white;border-color: rgb(255, 153, 0);">
