--- a/sort2.html
+++ b/sort2.html
@@ -13,7 +13,7 @@
       table = document.getElementById("tbl");
       tr = table.getElementsByTagName("tr");
       for (i = 0; i < tr.length; i++) {
-        td = tr[i].getElementsByTagName("td")[0];
+        td = tr[i].getElementsByTagName("td")[];
         if (td) {
           txtValue = td.textContent || td.innerText;
           if (txtValue.toUpperCase().indexOf(filter) > -1) {
@@ -28,7 +28,7 @@
     </head>
     <body>
         <div class="w3-center w3-container">
-            <img src="../Soham/favicon.jpeg">
+            <img src="C:\Users\admin\Desktop\e76fef8a-b546-4f39-ab44-e7fde7922550.jpg">
         </div>
         <div class="w3-center w3-text-black w3-container">
             <h2>Welcome to Soham Quizbase</h2>
@@ -89,13 +89,15 @@
     <table width=85% border="0" id="tbl" class="w3-tabel w3-content w3-border w3-striped w3-center">
         <thead class="w3-blue">
           <tr id="click1" class="col-3">
-              <th>Theme <i class="fa fa-sort" onclick="myfunction()"></i></th>
-              <th>Type <i class="fa fa-sort"></i></th>
+            <th class ="w3-left-align"> THEME&nbsp;<i class="fa fa-sort"  onclick ="myschool( 0,'searchResultsTable')"  ></i> </th>
+            
+              <th>Type <i class="fa fa-sort-asc" fa></i></th>
               <th>Author <i class="fa fa-sort"></i></th>
               <th>Question <i class="fa fa-sort"></i></th>
               <th>Status <i class="fa fa-sort"></i></th>
               <th>Show</th>
           </tr>
+          
         </thead>
         <tbody>
             <tr>
@@ -125,7 +127,7 @@
                 <td>People of India</td>
                 <td>MCQ</td>
                 <td>Ganita</td>
-                <td id="demo">Who is th author of the book Glimpses of world History</td>
+                <td >Who is th author of the book Glimpses of world History</td>
                 <td><i class="fa fa-close"></i></td>
                 <td><a><button onclick="document.getElementById('my click').style.display='block'" class="w3-button w3-yellow"><i class="fa fa-envelope-open"></i></button></a></td>
                 <div class="w3-modal" id="my click">
@@ -215,5 +217,42 @@
         <a href="#" class="w3-button">3</a>
         <a href="#" class="w3-button">&raquo;</a>
      </div>
+
+     <script>
+      function myschool() {
+        var table, rows, switching, i, x, y, shouldSwitch;
+        table = document.getElementById("tbl");
+        switching = true;
+        /*Make a loop that will continue until
+        no switching has been done:*/
+        while (switching) {
+          //start by saying: no switching is done:
+          switching = false;
+          rows = table.rows;
+          /*Loop through all table rows (except the
+          first, which contains table headers):*/
+          for (i = 1; i < (rows.length - 1); i++) {
+            //start by saying there should be no switching:
+            shouldSwitch = false;
+            /*Get the two elements you want to compare,
+            one from current row and one from the next:*/
+            x = rows[i].getElementsByTagName("TD")[0];
+            y = rows[i + 1].getElementsByTagName("TD")[0];
+            //check if the two rows should switch place:
+            if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+              //if so, mark as a switch and break the loop:
+              shouldSwitch = true;
+              break;
+            }
+          }
+          if (shouldSwitch) {
+            /*If a switch has been marked, make the switch
+            and mark that a switch has been done:*/
+            rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+            switching = true;
+          }
+        }
+      }
+      </script>
     </body>
 </html>
